# Tarea-2_Concept

./: CMakeLists.txt  clases_definidas.h  concepts_algoritmos.h  test_max.cpp  test_max_variadic.cpp  test_mean.cpp  test_mean_variadic.cpp  test_sum.cpp  test_sum_variadic.cpp  test_transform_reduce.cpp  test_variance.cpp  test_variance_variadic.cpp
